--- a/src/DeCloud.NodeAgent/CloudInit/Templates/dht-vm-cloudinit.yaml
+++ b/src/DeCloud.NodeAgent/CloudInit/Templates/dht-vm-cloudinit.yaml
@@ -2,7 +2,7 @@
 # DeCloud DHT VM Cloud-Init Configuration
 # Runs a libp2p Kademlia DHT node for peer discovery,
 # key-value storage, and GossipSub event propagation.
-# Version: 3.1 (Added dashboard server + nginx reverse proxy)
+# Version: 4.0 (WireGuard mesh connectivity)
 
 hostname: __HOSTNAME__
 manage_etc_hosts: true
@@ -38,6 +38,8 @@ packages:
   - openssl
   - nginx
   - python3
+  - wireguard
+  - wireguard-tools
 
 # =====================================================
 # SYSTEM CONFIGURATION
@@ -60,6 +62,23 @@ write_files:
       DHT_DATA_DIR=/var/lib/decloud-dht
       DECLOUD_NODE_ID=__NODE_ID__
       DECLOUD_REGION=__DHT_REGION__
+
+  # WireGuard mesh enrollment environment variables
+  - path: /etc/decloud/wg-mesh.env
+    permissions: '0600'
+    content: |
+      WG_RELAY_ENDPOINT=__WG_RELAY_ENDPOINT__
+      WG_RELAY_PUBKEY=__WG_RELAY_PUBKEY__
+      WG_TUNNEL_IP=__WG_TUNNEL_IP__
+      WG_RELAY_API=__WG_RELAY_API__
+      WG_INTERFACE=wg-mesh
+      WG_DESCRIPTION=dht-__VM_ID__
+
+  # WireGuard mesh enrollment script (building block)
+  - path: /usr/local/bin/wg-mesh-enroll.sh
+    permissions: '0755'
+    content: |
+      __WG_MESH_ENROLL__
 
   # DHT metadata
   - path: /etc/decloud/dht-metadata.json
@@ -155,8 +174,9 @@ write_files:
     content: |
       [Unit]
       Description=DeCloud DHT Node (libp2p Kademlia)
-      After=network-online.target
+      After=network-online.target wg-quick@wg-mesh.service
       Wants=network-online.target
+      Requires=wg-quick@wg-mesh.service
 
       [Service]
       Type=simple
@@ -261,6 +281,9 @@ runcmd:
   # Enable and start QEMU guest agent (static unit - systemctl enable fails silently)
   - ln -sf /lib/systemd/system/qemu-guest-agent.service /etc/systemd/system/multi-user.target.wants/qemu-guest-agent.service
   - systemctl start qemu-guest-agent
+
+  # WireGuard mesh enrollment — must happen before DHT starts
+  - source /etc/decloud/wg-mesh.env && bash /usr/local/bin/wg-mesh-enroll.sh
 
   # Configure and start Nginx
   - ln -sf /etc/nginx/sites-available/dht-proxy /etc/nginx/sites-enabled/
